--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 # Ignorer les dossiers node_modules dans les sous-dossiers "client" et "server"
 /client/node_modules/
 /server/node_modules/
+
+# Cypress
+cypress/
